@@ -183,6 +183,21 @@ if test x$platform_win32 = xno; then
 	dnl *****************************
 	AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")
 
+	dnl *******************************
+	dnl *** Checks for MSG_NOSIGNAL ***
+	dnl *******************************
+	AC_MSG_CHECKING(for MSG_NOSIGNAL)
+	AC_TRY_COMPILE([#include <sys/socket.h>], [
+		int f = MSG_NOSIGNAL;
+	], [
+		# Yes, we have it...
+		AC_MSG_RESULT(yes)
+		AC_DEFINE(HAVE_MSG_NOSIGNAL)
+	], [
+		# We'll have to use signals
+		AC_MSG_RESULT(no)
+	])
+
 	dnl *****************************
 	dnl *** Checks for SOL_IP     ***
 	dnl *****************************
