@@ -1,3 +1,7 @@
+2002-06-10  Jaroslaw Kowalski <jarek@atm.com.pl>
+
+	* configure.in: added checks for MSG_NOSIGNAL
+
 2002-05-30  Daniel Morgan <danmorg@sc.rr.com>
 
 	* doc/ado-net: update the ado-net web page on go-mono.com
